--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit=1.12.2
-numpy=1.21.5
-pandas=1.4.2
-scikit-learn=1.1.1
-requests=2.27.1
-streamlit-lottie=0.0.3
+streamlit==0.81.0
+numpy==1.20.2
+pandas==1.2.4
+scikit-learn==1.1.1
+requests==2.27.1
+streamlit-lottie==0.0.3
